# j9s

./: .gitignore  CLAUDE.md  Cargo.toml  HANDLE_KEY_CLEANUP.md  LICENSE  README.md  config.example.yaml
docs/: demo.tape  query-client-plan.md
migrations/: 001_initial.sql
src/: app.rs  commands.rs  config.rs  event.rs  main.rs  query.rs
src/cache/: layer.rs  mod.rs  storage.rs  traits.rs
src/db/: mod.rs  schema.rs
src/jira/: api_types.rs  cache.rs  cached_client.rs  client.rs  mod.rs  types.rs
src/ui/: mod.rs  view.rs
src/ui/components/: command_input.rs  command_overlay.rs  filter_bar.rs  filter_field_picker.rs  filter_source.rs  header.rs  input.rs  issue_filters.rs  key_result.rs  mod.rs  search_input.rs  status_picker.rs  ticket_panel.rs
src/ui/renderfns/: footer.rs  header.rs  mod.rs  utils.rs
src/ui/views/: board.rs  board_list.rs  boards.rs  epic_detail.rs  epic_list.rs  issue_detail.rs  issue_list.rs  issues.rs  mod.rs
