[package]
name = "j9s"
version = "0.1.0"
edition = "2021"
description = "A terminal UI for Jira, inspired by k9s"
license = "MIT"
repository = "https://github.com/spion/j9s"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Jira API
gouqi = { version = "0.20", features = ["async"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "gzip", "deflate"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Config & CLI
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
dirs = "5"

# Error handling
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# JSON
serde_json = "1"
